--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -6,12 +6,12 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.google.appengine:gradle-appengine-plugin:1.9.42'
+        classpath 'com.google.appengine:gradle-appengine-plugin:1.9.59'
     }
 }
 
 repositories {
-    jcenter();
+    jcenter()
 }
 
 apply plugin: 'java'
@@ -22,12 +22,12 @@ sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 
 dependencies {
-    appengineSdk 'com.google.appengine:appengine-java-sdk:1.9.42'
-    compile 'com.google.appengine:appengine-endpoints:1.9.42'
-    compile 'com.google.appengine:appengine-endpoints-deps:1.9.42'
-    compile 'javax.servlet:servlet-api:2.5'
-    compile 'com.google.api-client:google-api-client:1.23.0'
-    compile 'com.google.http-client:google-http-client-android:1.23.0'
+    appengineSdk 'com.google.appengine:appengine-java-sdk:1.9.59'
+    implementation 'com.google.appengine:appengine-endpoints:1.9.59'
+    implementation 'com.google.appengine:appengine-endpoints-deps:1.9.59'
+    implementation 'javax.servlet:servlet-api:2.5'
+    implementation 'com.google.api-client:google-api-client:1.23.0'
+    implementation 'com.google.http-client:google-http-client-android:1.23.0'
 }
 
 appengine {
