--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,11 @@ buildscript {
     repositories {
         jcenter()
         google()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.google.appengine:gradle-appengine-plugin:1.9.59'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
