--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ android {
     compileSdkVersion 26
     buildToolsVersion '26.0.2'
 
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
+
     defaultConfig {
         applicationId "com.udacity.gradle.builditbigger"
         minSdkVersion 16
@@ -29,4 +33,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:11.6.0'
     implementation project(path: ':JavaJoker')
     implementation project(path: ':jokerdroid')
+    compile 'com.google.http-client:google-http-client-android:1.23.0'
+    compile 'com.google.api-client:google-api-client:1.23.0'
 }
