Modify build.gradle (app) to create free and paid flavors.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    flavorDimensions "tier"
+
+    productFlavors {
+        free {
+            dimension "tier"
+        }
+
+        paid {
+            dimension "tier"
+        }
+    }
 }
 
 dependencies {
