--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '26.0.3'
 
     configurations.all {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
@@ -28,10 +28,12 @@ android {
     productFlavors {
         free {
             dimension "tier"
+            applicationId "com.udacity.gradle.builditbigger.free"
         }
 
         paid {
             dimension "tier"
+            applicationId "com.udacity.gradle.builditbigger.paid"
         }
     }
 }
@@ -44,7 +46,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
     implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.google.android.gms:play-services-ads:11.6.0'
+    implementation 'com.google.android.gms:play-services-ads:11.8.0'
+    implementation 'com.jakewharton.timber:timber:4.6.1'
     implementation project(path: ':JavaJoker')
     implementation project(path: ':jokerdroid')
     compile 'com.google.http-client:google-http-client-android:1.23.0'
