--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     implementation project(path: ':jokerdroid')
     implementation 'com.google.http-client:google-http-client-android:1.23.0'
     implementation 'com.google.api-client:google-api-client:1.23.0'
-    implementation 'com.google.android.gms:play-services-ads:11.8.0'
+    freeImplementation 'com.google.android.gms:play-services-ads:11.8.0'
 
     implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
