--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,32 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.cloud.tools.endpoints-framework-client'
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.google.cloud.tools:endpoints-framework-gradle-plugin:1.0.2'
+    }
+}
 
 android {
     compileSdkVersion 26
     buildToolsVersion '26.0.3'
-
-    configurations.all {
-        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
-    }
+    flavorDimensions "tier"
 
     defaultConfig {
         applicationId "com.udacity.gradle.builditbigger"
         minSdkVersion 16
         targetSdkVersion 26
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -23,29 +34,47 @@ android {
         }
     }
 
-    flavorDimensions "tier"
+//    packagingOptions {
+//        exclude 'META-INF/DEPENDENCIES'
+//        exclude 'META-INF/LICENSE'
+//        exclude 'META-INF/LICENSE.txt'
+//        exclude 'META-INF/license.txt'
+//        exclude 'META-INF/NOTICE'
+//        exclude 'META-INF/NOTICE.txt'
+//        exclude 'META-INF/notice.txt'
+//        exclude 'META-INF/ASL2.0'
+//        exclude 'com/google/appengine/repackaged/org/apache/commons/codec/language/bm/*.txt'
+//
+//    }
 
     productFlavors {
         free {
-            dimension "tier"
             applicationId "com.udacity.gradle.builditbigger.free"
         }
 
         paid {
-            dimension "tier"
             applicationId "com.udacity.gradle.builditbigger.paid"
         }
     }
+
+    sourceSets { paid { java.srcDirs = ['src/paid/java', 'src/paid/java/'] } }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:support-v4:26.1.0'
+    endpointsServer project(path: ':backend', configuration: 'endpoints')
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.jakewharton.timber:timber:4.6.1'
-    implementation project(path: ':jokerdroid')
-    implementation 'com.google.http-client:google-http-client-android:1.23.0'
-    implementation 'com.google.api-client:google-api-client:1.23.0'
     freeImplementation 'com.google.android.gms:play-services-ads:11.8.0'
+    implementation 'com.google.api-client:google-api-client:1.23.0'
+    implementation 'com.google.http-client:google-http-client-android:1.23.0'
+    implementation 'com.android.support:multidex:1.0.2'
+    implementation 'com.google.code.findbugs:jsr305:3.0.1'
+    implementation 'com.jakewharton.timber:timber:4.6.1'
+
+
+    implementation project(path: ':jokerdroid')
+
 
     implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
